build_log_debug.txt
zig : [DEBUG build_start] Build function started (session: A)
At C:\Users\donald\nyon-game\debug_build.ps1:1 char:1
+ zig build *>&1 | Out-File -FilePath build_log_debug.txt -Encoding utf ...
+ ~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: ([DEBUG build_st...ed (session: A):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
[DEBUG target_optimize_setup] Target and optimize options set (session: A)
[DEBUG build_complete] Build function completed successfully (session: A)
install
+- install nyon_game
   +- compile exe nyon_game Debug native 1 errors
src\vendor\sysgpu\sysgpu\interface.zig:302:28: error: sysgpu.Interface field 'deviceCreateRenderPipeline'
                                                      	expected type: fn (*sysgpu.device.Device, *const 
sysgpu.render_pipeline.RenderPipeline.Descriptor) *sysgpu.render_pipeline.RenderPipeline
                                                      	   found type: fn (*sysgpu.device.Device, *const 
sysgpu.render_pipeline.RenderPipeline.Descriptor) callconv(.@"inline") ?*sysgpu.render_pipeline.RenderPipeline
    if (FoundDecl != Decl) @compileError("sysgpu.Interface field '" ++ name ++ "'\n\texpected type: " ++ 
@typeName(Decl) ++ "\n\t   found type: " ++ @typeName(FoundDecl));
                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\vendor\sysgpu\sysgpu\interface.zig:24:15: note: called at comptime here
    assertDecl(T, "deviceCreateRenderPipeline", fn (device: *sysgpu.Device, descriptor: *const 
sysgpu.RenderPipeline.Descriptor) *sysgpu.RenderPipeline);
    ~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\vendor\sysgpu\main.zig:19:34: note: called at comptime here
pub const Impl = sysgpu.Interface(struct {
                 ~~~~~~~~~~~~~~~~^
referenced by:
    Impl: src\vendor\sysgpu\sysgpu\interface.zig:14:92
    Impl: src\vendor\sysgpu\sysgpu\main.zig:35:27
    8 reference(s) hidden; use '-freference-trace=10' to see all references
error: 1 compilation errors
failed command: "C:\\ProgramData\\scoop\\persist\\zvm\\data\\master\\zig.exe" build-exe -ODebug --dep raylib=raygui 
--dep raygui --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\main.zig" 
"-Mraygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" 
"-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib=raygui --dep raygui --dep zglfw 
--dep sysgpu --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -ODebug 
"-Msysgpu=C:\\Users\\donald\\nyon-game\\src\\vendor\\sysgpu\\main.zig" -lc --cache-dir .zig-cache --global-cache-dir 
"C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_game --zig-lib-dir 
"C:\\ProgramData\\scoop\\persist\\zvm\\data\\master\\lib\\" --listen=-

Build Summary: 2/5 steps succeeded (1 failed)
install transitive failure
+- install nyon_game transitive failure
   +- compile exe nyon_game Debug native 1 errors

error: the following build command failed with exit code 1:
.zig-cache\o\fc5c413947fd13d6d2c4a61a073338c6\build.exe C:\ProgramData\scoop\persist\zvm\data\master\zig.exe 
C:\ProgramData\scoop\persist\zvm\data\master\lib C:\Users\donald\nyon-game .zig-cache 
C:\Users\donald\AppData\Local\zig --seed 0x954308f3 -Ze27034ee7bdadd24
